Add go & python services in Docker

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,7 +15,7 @@ services:
       KAFKA_CONTROLLER_QUORUM_VOTERS: "1@broker:9093"
       KAFKA_CONTROLLER_LISTENER_NAMES: "CONTROLLER"
       KAFKA_LISTENERS: "PLAINTEXT://:9092,CONTROLLER://:9093,EXTERNAL://:9094"
-      KAFKA_ADVERTISED_LISTENERS: "PLAINTEXT://localhost:9092,EXTERNAL://localhost:9094"
+      KAFKA_ADVERTISED_LISTENERS: "PLAINTEXT://broker:9092,EXTERNAL://localhost:9094"
       KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: "CONTROLLER:PLAINTEXT,PLAINTEXT:PLAINTEXT,EXTERNAL:PLAINTEXT"
       KAFKA_INTER_BROKER_LISTENER_NAME: "PLAINTEXT"
       KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: "1"
@@ -24,3 +24,44 @@ services:
       KAFKA_NUM_PARTITIONS: "1"
     volumes:
       - ./kafka-data:/var/lib/kafka/data
+    networks:
+      - default
+    healthcheck:
+      test: ["CMD-SHELL", "bash -c 'timeout 1 bash -c \"</dev/tcp/broker/9092\" >/dev/null 2>&1'"]
+      interval: 5s
+      timeout: 2s
+      retries: 12
+
+  go-producer:
+    build:
+      context: ./golang
+      dockerfile: Dockerfile
+    container_name: go-producer
+    ports:
+      - "8080:8080"
+    depends_on:
+      kafka:
+        condition: service_healthy
+    environment:
+      - KAFKA_BROKER=broker:9092
+    networks:
+      - default
+    restart: on-failure
+
+  python-consumer:
+    build:
+      context: ./python
+      dockerfile: Dockerfile
+    container_name: python-consumer
+    depends_on:
+      kafka:
+        condition: service_healthy
+    environment:
+      - KAFKA_BROKER=broker:9092
+    networks:
+      - default
+    restart: on-failure
+
+networks:
+  default:
+    driver: bridge
